# jdw-billboarding-backend

./: .gitignore  AGENTS.md  Cargo.toml  OSC_COMPARISON_PLAN.md  README.md  capture_compare.sh  install.sh  normalize_rust_dump.py  parse_osc_dump.py
docs/: NRT_DIFF_PLAN.md  NRT_MIGRATION_PLAN.md  NRT_OVERVIEW.md
examples/: dump_osc.rs
scripts/: compare_scds.py
src/: billboard.rs  config.rs  full.rs  lib.rs  listener.rs  macros.rs  main.rs  note_utils.rs  osc.rs  sample_loader.rs  score.rs  shuttle.rs  synthdefs.rs
tests/: integration.rs
